--- a/themes/v15_fadmashion_commerce/css/style.css
+++ b/themes/v15_fadmashion_commerce/css/style.css
@@ -198,7 +198,7 @@ a.link{position:absolute;height: 150px;width: 200px;display: block;z-index: 10;}
 #item_nav a.next{background: url(../images/b_itemnav_next.png) top left no-repeat; left: 804px;}
 #item_nav a:hover{background-position: bottom left;}
 
- .next_prev_tooltip {color: #fff;  font-weight: bold; font-size: 11px;}
+ .next_prev_tooltip {color: #fff;  font-weight: bold; font-size: 11px;margin-bottom: 5px;}
 
 /********* collection page  **********/
 
