--- a/themes/v15_fadmashion_commerce/css/style.css
+++ b/themes/v15_fadmashion_commerce/css/style.css
@@ -199,7 +199,7 @@ a.link{position:absolute;height: 150px;width: 200px;display: block;z-index: 10;}
 #item_nav a:hover{background-position: bottom left;}
 
  .next_prev_tooltip {color: #fff;  font-weight: bold; font-size: 11px;margin-bottom: 5px;}
- .next_prev_tooltip span {font-style: italic; font-weight: normal;}
+ .next_prev_tooltip span {font-style: italic; font-weight: normal; font-size: 10px;}
 /********* collection page  **********/
 
 
