--- a/themes/v15_fadmashion_commerce/css/style.css
+++ b/themes/v15_fadmashion_commerce/css/style.css
@@ -462,6 +462,9 @@ margin-bottom:8px;
 
 .faq h3 {margin: 20px 0 9px 0;}
 
+#node_783 .field-name-body, #webform-client-form-783 {float: left}
+#nod_783 .field-name-field-body-2 {float: right; width: 300px; padding-left: 20px; margin-left: 20px; }
+
 /* Global ACCORDIAN STYLING*/
 .ui-accordion { width: 100%; }
 .ui-accordion .ui-accordion-header { cursor: pointer; position: relative; margin-top: 1px; zoom: 1; }
