--- a/themes/v15_fadmashion_commerce/css/style.css
+++ b/themes/v15_fadmashion_commerce/css/style.css
@@ -454,11 +454,12 @@ margin-bottom:8px;
 .page-static .contentPanel .pad {padding: 20px; overflow: hidden}
 .page-static .pad h2 {display:none;}
 
-.static_page ul {padding-bottom: 15px;border-bottom: 1px solid #DDD;}
-.static_page li {padding: 2px 0}
-.static_page ul {margin-bottom: 20px; padding-bottom: 20px; border-bottom: 1px solid #ddd}
-.static_page p {font-size: 14px;color: #555;}
-.static_page h3 {color: #B11C16;font-weight: 100;font-size: 18px;}
+.page-static .contentPanel  ul {padding-bottom: 15px;border-bottom: 1px solid #DDD;}
+.page-static .contentPanel li {padding: 2px 0}
+.page-static .contentPanel ul {margin-bottom: 20px; padding-bottom: 20px; border-bottom: 1px solid #ddd}
+.page-static .contentPanel  p {font-size: 14px;color: #555;}
+.page-static .contentPanel  h3 {color: #B11C16;font-weight: 100;font-size: 18px;}
+.page-static .contentPanel {font-size: 11px; }
 
 .faq h3 {margin: 20px 0 9px 0;}
 
