--- a/themes/v15_fadmashion_commerce/css/style.css
+++ b/themes/v15_fadmashion_commerce/css/style.css
@@ -468,7 +468,7 @@ margin-bottom:8px;
 #node_783 .content_col1 {border-right: 1px dotted #ddd; padding-right: 20px}
 #node_783 .content_col1  .field-name-body {border-bottom: 1px dotted #ddd; padding-bottom: 10px; margin-bottom: 10px}
 #node_783 .content_col1, #node_783 .content_col2 {float: left}
-#node_783 .content_col2 { margin-left: 20px; padding-left: 20px }
+#node_783 .content_col2 {  padding-left: 20px; width: 320px}
 
 /* Global ACCORDIAN STYLING*/
 .ui-accordion { width: 100%; }
