--- a/themes/v15_fadmashion_commerce/css/style.css
+++ b/themes/v15_fadmashion_commerce/css/style.css
@@ -450,6 +450,30 @@ font-size:16px;
 margin-bottom:8px;
 }
 
+
+/********* invite progress bar **********/
+
+.progressWrapper{ width: 300px; margin: 0 0 20px 0; }
+.count{float: right; font-weight:bold; font-size: 14px; line-height:27px;}
+.progressBarOuter{background: #fff; width: 90% ;float: left; border: 1px solid #777; height: 25px;
+-webkit-border-radius: 7px;
+-moz-border-radius: 7px;
+border-radius: 7px; 
+-moz-box-shadow:    inset 0 0 10px #000000;
+-webkit-box-shadow: inset 0 0 10px #000000;
+box-shadow:         inset 2px 2px 2px #aaa;}
+.progressBarInner{
+  
+  background: url(../images/bg_progressbar.jpg) top left no-repeat; height: 100%;
+-webkit-border-top-left-radius: 7px;
+-webkit-border-bottom-left-radius: 7px;
+-moz-border-radius-topleft: 7px;
+-moz-border-radius-bottomleft: 7px;
+border-top-left-radius: 7px;
+border-bottom-left-radius: 7px;}
+
+
+
 /* Global Static Pages */
 .page-static .contentPanel .pad {padding: 20px; overflow: hidden}
 .page-static .pad h2 {display:none;}
