--- a/themes/v15_fadmashion_commerce/css/style.css
+++ b/themes/v15_fadmashion_commerce/css/style.css
@@ -472,6 +472,13 @@ box-shadow:         inset 2px 2px 2px #aaa;}
 border-top-left-radius: 7px;
 border-bottom-left-radius: 7px;}
 
+.labels{clear: both; padding: 3px 0 0 0; position: relative;}
+.labels div{ font-size: 12px; color: #888; width: 80px; line-height:13px; padding-top: 6px; background: url(../images/arrow_progress.png) top center no-repeat; position: absolute; text-align: center;}
+.labels .step1{left: 15px;}
+.labels .step2{left: 95px;}
+.labels .step3{left: 228px;}
+
+
 
 
 /* Global Static Pages */
