--- a/themes/v15_fadmashion_commerce/css/style.css
+++ b/themes/v15_fadmashion_commerce/css/style.css
@@ -436,7 +436,7 @@ a.btnFacebook:hover, a.btnTwitter:hover{background-position: bottom left;}
 #invite_block h3 {font-style: italic; font-size: 12px; font-weight: normal; color: #;}
 #invite_block #explanation {background-color: #fff;font-size: 12px;  text-align: left;  padding: 15px; border: 1px solid #444; overflow: hidden;}
 #invite_block #explanation #col1, #invite_block #explanation #col2 {float: left; width: 46%;}
-#invite_block #explanation #col2 {width: 50%; margin-left: 10px; padding-left: 15px; border-left: 1px dotted #aaa}
+#invite_block #explanation #col2 {width: 50%; position: relative margin-left: 10px; padding-left: 15px; border-left: 1px dotted #aaa}
 #invite_block #email {margin-top: 20px; }
 #invite_block #share_link {margin-top: 40px}
 #invite_block .form-text.urlCode{float: left}
@@ -472,11 +472,11 @@ box-shadow:         inset 2px 2px 2px #aaa;}
 border-top-left-radius: 7px;
 border-bottom-left-radius: 7px;}
 
-.labels{clear: both; padding: 3px 0 0 0; position: relative;}
+.labels{clear: both; padding: 3px 0 0 0; ;}
 .labels div{ font-size: 12px; color: #888; width: 80px; line-height:13px; padding-top: 6px; background: url(../images/arrow_progress.png) top center no-repeat; position: absolute; text-align: center;}
-.labels .step1{left: 15px;}
-.labels .step2{left: 95px;}
-.labels .step3{left: 228px;}
+.labels .step1{left: 30px;}
+.labels .step2{left: 110px;}
+.labels .step3{left: 243px;}
 
 
 
