--- a/themes/v15_fadmashion_commerce/css/style.css
+++ b/themes/v15_fadmashion_commerce/css/style.css
@@ -694,7 +694,7 @@ top:14px;}
 .orderDetails .thumb{width: 90px; border: 1px solid #ddd5ce;}
 .orderDetails .col1 {width: 120px !important;}
 .orderDetails .col1, .orderDetails .col2{float: left;}
-.orderDetails .col2{padding-left: 16px; width: 480px;}
+.orderDetails .col2{padding-left: 16px; width: 480px !important;}
 .orderDetails .price{float: right; text-align:right; width: 200px;}
 .orderDetails .itemName{border-bottom: 1px solid #ded9cf; margin-bottom: 10px; padding-bottom: 6px;}
 .orderDetails .option{font-size: 12px; margin-bottom: 5px;}
