--- a/themes/v15_fadmashion_commerce/css/style.css
+++ b/themes/v15_fadmashion_commerce/css/style.css
@@ -693,7 +693,8 @@ top:14px;}
 .orderDetails{background: #fff;border-radius:5px; -webkit-border-radius: 5px; -moz-border-radius: 5px; padding: 10px; float: left; width: 660px;/* border: 1px solid #ded9cf;*/}
 .orderDetails .thumb{width: 90px; border: 1px solid #ddd5ce;}
 .orderDetails .col1, .orderDetails .col2{float: left;}
-.orderDetails .col2{padding-left: 16px; width: 480px !important;}
+.orderDetails .col1 {width: 100px !important;}
+.orderDetails .col2{padding-left: 16px; width: 470px !important;}
 .orderDetails .price{float: right; text-align:right; width: 200px;}
 .orderDetails .itemName{border-bottom: 1px solid #ded9cf; margin-bottom: 10px; padding-bottom: 6px;}
 .orderDetails .option{font-size: 12px; margin-bottom: 5px;}
@@ -701,8 +702,8 @@ top:14px;}
 
 .totals{   font-size: 13px;}
 .totals .discount, .totals .tax, .totals .shipping, .totals .total{padding: 3px 0;float: left;}
-.totals .col1{text-align: right; width: 574px; }
-.totals .col2{text-align: right; width: 70px;}
+.totals .col1{text-align: right; width: 535px !important }
+.totals .col2{text-align: right; width: 70px !important;}
 .totals .discount{color: #be4038;}
 .totals .total{font-size: 16px;border-top: 1px solid #ded9cf; margin-top: 5px; padding-top: 8px;}
 
