--- a/themes/v15_fadmashion_commerce/css/style.css
+++ b/themes/v15_fadmashion_commerce/css/style.css
@@ -157,7 +157,7 @@ a.link{position:absolute;height: 150px;width: 200px;display: block;z-index: 10;}
 .panel.big a.link{height: 433px;width: 332px;}
 .panel.big .overlay{bottom: 25px !important;}
 
-.slides{z-index:0;visibility:hidden;}
+.slides{z-index:0;display:none;}
 .slides.active{visibility:visible;}
   
 .panel-block .overlay{position: absolute; z-index: 999; bottom: -258px; left: 20px;}
