--- a/themes/v15_fadmashion_commerce/css/style.css
+++ b/themes/v15_fadmashion_commerce/css/style.css
@@ -201,6 +201,8 @@ a.link{position:absolute;height: 150px;width: 200px;display: block;z-index: 10;}
 
  .next_prev_tooltip {color: #fff;  font-weight: bold; font-size: 11px;margin-bottom: 5px;}
  .next_prev_tooltip span {font-style: italic; font-weight: normal; font-size: 10px;}
+ 
+ #slider_loader{position: absolute;right: 8px;top: 35px;z-index: 99;}
 /********* collection page  **********/
 
 
