--- a/themes/v15_fadmashion_commerce/css/style.css
+++ b/themes/v15_fadmashion_commerce/css/style.css
@@ -30,6 +30,11 @@ span {
     font-size: inherit;
     font-style: inherit;
     font-weight: inherit;}
+    
+    
+.facebookBtn{width: 238px; height: 36px; line-height: 36px; text-indent: 25px; color: #fff; font-size: 16px;background: url(../images/b_facebook.png) top left no-repeat; display: block; margin: 0 auto; text-decoration: none; }
+.facebookBtn:hover{background-position: bottom left;}
+
 /********* header **********/
 
 #header{height: 89px;}
